# AI-Campus_Ag_Imaging_2021

./: README.md  pretraining_for_rice_image_classification2.ipynb  pyproject.toml  rice_image_EDA.ipynb  rice_image_classification.ipynb  rice_image_classification_2.ipynb  rice_image_transfer_learning.ipynb
