[tool.poetry]
name = "ag_imaging"
version = "0.1.0"
description = ""
authors = ["Jason L Causey <jcausey@astate.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
tensorflow-datasets = "^4.3.0"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
tensorflow = "^2.5.0"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
